--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -47,7 +47,16 @@ a {
 
 /* ====== HEADER ===== */
 
+.fix-header {
+    background: #E6F0FF;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
 .header {
+    display: flex;
     position: relative;
     height: 100vh;
     background: #E6F0FF;
@@ -56,7 +65,8 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    /* padding-top: 38px; */
+    padding: 12px 0;
 }
 
 .navbar ul {
