--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -58,7 +58,7 @@ a {
 .header {
     display: flex;
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 90px);
     background: #E6F0FF;
 }
 
