--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -61,6 +61,7 @@ a {
 
 .header {
     display: flex;
+    align-items: center;
     position: relative;
     height: calc(100vh - 90px);
     background: #E6F0FF;
@@ -108,12 +109,11 @@ a {
     border-radius: 8px;
 }
 
-.hero .info {
-    margin-top: 130px;
+.header .info {
     max-width: 50%;
 }
 
-.hero .sub-title {
+.header .sub-title {
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
@@ -121,7 +121,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.header .title {
     margin-top: 8px;
     font-size: 6.2rem;
     font-weight: 700;
@@ -129,7 +129,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.header .desc {
     margin-top: 30px;
     font-size: 1.8rem;
     font-weight: 400;
